--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ main{
 .gridt{
     display: grid;
     grid-template-columns: 100vw;
-    grid-template-rows: 10% 15% 45% 20% 10%;
+    grid-template-rows: 10% 15% 55% 20% ;
     grid-template-areas: "navt" "inicio" "creadora" "foot";
 }
 #navt{
@@ -404,7 +404,22 @@ main{
     }
     
 }
-
+.footer{
+    background-color: rgba(0, 0, 0, 0.7);
+    text-align: center;
+    color:rgb(0, 0, 0)
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+}
+.footer a{
+    display: inline-flex;
+    margin-right: 10px;
+    margin-left: 10px;
+    justify-self: center;
+    text-align: center;
+}
 /****************** empiezan las medias querys para desktop ******************/
 @media screen and (min-width: 1024px) {
 
