--- a/css/style2.css
+++ b/css/style2.css
@@ -11,14 +11,35 @@
 	background-color: #37094e21;
     background-blend-mode: multiply;
 }
+@keyframes increment{
+    from{opacity: 0}
+    to{opacity: 1}
+}
+@keyframes fadeIn {
+    0%{opacity: 0}
+    20%{opacity: 0.2}
+    40%{opacity: 0.4}
+    60%{opacity: 0.6}
+    80%{opacity: 0.8}
+    100%{opacity: 1} 
+ } 
+.mover:hover{
+    transform: translate(10px, 10px);
+    cursor: pointer;
+    transition: 0.5s;
+}   
 h1{
     text-align: center;
     font-size: 3rem;
+    animation-name: increment; 
+    animation-duration: 3s;
 }
 h2{
     text-align: center;
     font-size: 2rem;
     font-weight: 1000;
+    animation-name: increment; 
+    animation-duration: 3s;
 }
 
 .pie{
@@ -48,6 +69,22 @@ h2{
 .seccion{
     animation-name: increment; 
     animation-duration: 3s;
+}
+.footer{
+    background-color: rgba(0, 0, 0, 0.7);
+    text-align: center;
+    color:rgb(0, 0, 0)
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+}
+.footer a{
+    display: inline-flex;
+    margin-right: 10px;
+    margin-left: 10px;
+    justify-self: center;
+    text-align: center;
 }
 
 .seccion article p{
